--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -169,7 +169,8 @@
         justify-content: space-evenly;
 
         h3 {
-            margin-bottom: 80px;
+            margin-bottom: 60px;
+            font-size: 26px;
             font: circular-medium !important;
         }
 
