--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -210,16 +210,15 @@
 
     display: flex;
     align-items: flex-start;
+
     justify-content: space-between;
 
-    // justify-content: space-evenly;
-    gap: 10%;
-
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 
     .statistics-box {
-        width: 160px;
-        height: 160px;
+        width: 180px;
+        height: 180px;
         display: flex;
         flex-direction: column;
         // justify-content: center;
@@ -227,19 +226,29 @@
         // justify-content: space-around;
         border: 1px solid  var(--font-lightgray-color);
         padding: 4px;
-        border-radius: 3px;
+        border-radius: 4px;
 
-        h4 {
-            margin-left:0;
-        }
 
-        h3 {
-            // margin-bottom: 0;
-        }
+        .card-content {
 
-        .MuiRating-root {
-            color : var(--font-dark-color-order)
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            
+            h4 {
+                margin-left:0;
+            }
         }
+            
+            h3 {
+                margin-bottom: 5px;
+            }
+            
+            .MuiRating-root {
+                color : var(--font-dark-color-order)
+            }
 
         
         
@@ -251,6 +260,10 @@
 
 .order-table-head {
     font-weight: 800;
+
+    h3 {
+        margin-bottom: 6px;
+    }
 }
 
 .static-pos {
@@ -259,6 +272,11 @@
 
 .static-neg {
     color: rgb(255, 6, 6)
+}
+
+.order-table-flex {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 
