--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -40,6 +40,13 @@
                 }
             }
 
+            .skeleton-preview {
+                margin: auto;
+                margin: 30px;
+
+
+            }
+
             .locatoing-rating {
                 width: 100%;
                 height: 30px;
