--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-top: 25px;
 
     >* {
         align-self: flex-end;
