--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -29,7 +29,7 @@
             grid-row: 2/3;
             position: relative;
             top: 10px;
-            margin-top: 40px;
+            margin-top: 0px;
 
             h2 {
                 display: block;
@@ -43,6 +43,7 @@
         }
 
         .reviews-container {
+            margin-top: 0;
             overflow: auto;
             height: 100%;
             grid-row: 1/-1;
