--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -18,6 +18,10 @@
 
             .order-header-line {
                 font-size: 16px;
+
+                .night{
+                    font-size: 14px
+                }
             }
 
             .order-header-line-ratings {
