--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -110,7 +110,7 @@
         line-height: 1.43rem;
         font-weight: 600;
         border-radius: 8px;
-        margin: 20px 0;
+        margin-top: 20px;
         background-color: var(--main-background-color);
         cursor: pointer;
 
