--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -328,11 +328,14 @@
 #root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(1) > div > div > fieldset{
     border: none;
 }
-// #root > div > main > section > section.stay-details.flex.stay-gray-box-shadow > div.stay-details-order > section > div.order-calander > section.date-ranger > div:nth-child(2) > div{
-//     margin: 0%;
-//     padding: 0%;
-// }
+.css-1amqzid-MuiFormLabel-root-MuiInputLabel-root{
+    display: none;
+}
 
+
+.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLabel-animated.MuiInputLabel-shrink.MuiInputLabel-outlined.MuiFormLabel-root.MuiFormLabel-colorPrimary.MuiFormLabel-filled.css-1amqzid-MuiFormLabel-root-MuiInputLabel-root{
+    display: none;
+}
 .react-datepicker-wrapper {
 
     input {
@@ -344,14 +347,3 @@
     }
 }
 
-// .rdrDateDisplayWrapper{
-//     display: none;
-// }
-
-// .rdrCalendarWrapper{
-//     width: 100%;
-// }
-
-// .rdrMonth{
-//     width: 100%;
-// }
