--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -16,7 +16,7 @@
         // overflow: hidden;
         border-radius: 20px;
         padding: 2%;
-        padding-top: 0;
+        padding-top: 10px;
         display: grid;
         grid-gap: 0 50px;
         grid-template-columns: 1.5fr 2fr;
@@ -89,7 +89,7 @@
             font-size: 24px;
             cursor: pointer;
             margin-right: 20px;
-            margin-top: 20px;
+            // margin-top: 20px;
             // padding: 10px;
         }
     }
