--- a/src/styles/components/stay-page/order-msg-modal.scss
+++ b/src/styles/components/stay-page/order-msg-modal.scss
@@ -78,6 +78,7 @@
 
                     b {
                         font-size: 16px;
+                        
                     }
                 }
             }
@@ -124,6 +125,7 @@
         justify-content: space-between;
         gap: 15px;
         font-size: 20px;
+        font-family: circular-bold;
     }
 
     // .order-added-msg {
