--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -211,7 +211,7 @@
     display: flex;
     align-items: flex-start;
 
-    justify-content: space-between;
+    gap: 3%;
 
     margin-bottom: 50px;
     margin-top: 50px;
@@ -255,6 +255,23 @@
     }
     h4 {
         margin-left: 20px;
+    }
+
+    .order-graph {
+        height: 200px;
+        width: 500px;
+    }
+
+    // canvas {
+    //     height: 200px !important; 
+    //     // width: 560px;
+    // }
+
+    .card-graph {
+        display:inline-block;
+        height: 200px;
+        
+
     }
 }
 
