--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -58,7 +58,7 @@
             border-radius: 25px;
             color: var(--font-dark-color);
             border: 1px solid var(--font-gray-see-throw-color);
-            box-shadow: 0px 4px 10px var(--font-lightgray-color);
+            // box-shadow: 0px 4px 10px var(--font-lightgray-color);
             cursor: pointer;
             margin-left: 0;
 
