--- a/src/styles/setup/media-quary.scss
+++ b/src/styles/setup/media-quary.scss
@@ -89,6 +89,10 @@
                         }
                     }
                 }
+
+                .login-page{
+                    right: 6%; 
+                }
             }
         }
     }
