--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -132,6 +132,7 @@
                 box-shadow: 0 6px 16px rgba(0, 0, 0, .12) !important;
                 -webkit-tap-highlight-color: transparent !important;
                 border: none;
+                cursor: pointer;
 
                 span {
                     font-family: circular-medium;
